<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#eeeeee"
        android:gravity="end|bottom"
        android:hint="@string/zero"
        android:padding="10dp"
        android:textSize="64sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="-10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/seven"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/eight"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onOperator"
            android:text="@string/slash"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="-10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/four"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/five"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/six"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onOperator"
            android:text="@string/asterisk"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="-10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/one"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/two"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/three"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onOperator"
            android:text="@string/dash"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="-4dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTripleZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onDigit"
            android:text="@string/triple_zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/zero"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_cyan_1"
            android:onClick="onOperator"
            android:text="@string/plus"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="-4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red_clear"
            android:onClick="onClear"
            android:text="@string/clearall"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red_clear"
            android:onClick="onBack"
            android:text="@string/clear"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textSize="32sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="bottom|center"
        android:text="This app developed for education purpose."
        android:textColor="@color/gray"/>
</LinearLayout>